adjusted a few figure captions

--- a/flux-entropy-paper/flux-entropy-paper.tex
+++ b/flux-entropy-paper/flux-entropy-paper.tex
@@ -94,7 +94,6 @@
 \maketitle
 
 \begin{abstract}
-
   In this note we present an analysis of an interaction data archive
   associated with a long-term practice-led research program
   investigating ensemble musical performance practice on touch
@@ -122,10 +121,11 @@
   \centering
   \includegraphics[width=\linewidth]{figures/three-performance-contexts}
   \caption{Collaborative musical interaction with our touch-screen
-    interfaces in two different {\em contexts} and two different {\em instrumentations}: (left to right) rehearsal
-    in a studio with iPads only,
-    concert performance with iPads and percussion instruments, and concert performance with 
-    iPads only.\label{fig:three-performance-contexts}}
+    interfaces in two different {\em contexts} and two different {\em
+      instrumentations}: (left to right) a rehearsal with iPads only,
+    concert performance with iPads and percussion instruments, and
+    concert performance with iPads
+    only.\label{fig:three-performance-contexts}}
 \end{figure*}
 
 
@@ -230,8 +230,7 @@ Entropy &   & 0.7683 & 3.342 & 4.442\\
   interaction sessions described in this note.  Each record in the corpus
   consists of low level touch-data (such as touches begin, touches move, touches end) recorded in CSV format. 
   Many of the participants were
-  present in multiple sessions, but this data was not tracked in
-  our (deidentified) corpus.\label{corpus-table}}
+  present in multiple sessions, but this data was not tracked.\label{corpus-table}}
 \end{table}
 
 \section{Macro Gestures, Transition Matrices and Matrix Measures}
@@ -347,7 +346,7 @@ insight into the internal structure of performances?
 \begin{figure} \centering
   \includegraphics[width=\linewidth]{figures/context-flux-entropy-boxplot}
   \caption{Distributions of flux and entropy values by performance
-context. Study and rehearsal sessions had the highest flux for
+context. Recording and rehearsal sessions had the highest flux for
 improvisations. Compositions had lower
 flux in rehearsals than concerts.
 \label{fig:flux-entropy-boxplot}}
@@ -427,13 +426,13 @@ matrices.
     \begin{subfigure}[t]{0.5\linewidth}
         \centering
           \includegraphics[width=\linewidth]{figures/type-section-flux-entropy}
-          \caption{Sessions divided by session type. \label{fig:type-section-flux-entropy}}
+          \caption{Sessions divided by performance type. \label{fig:type-section-flux-entropy}}
     \end{subfigure}%
     ~ 
     \begin{subfigure}[t]{0.5\linewidth}
         \centering
           \includegraphics[width=\linewidth]{figures/context-section-flux-entropy}
-          \caption{Sessions divided by session context. \label{fig:context-section-flux-entropy}}
+          \caption{Improvisation performances divided by session context. \label{fig:context-section-flux-entropy}}
     \end{subfigure}
     \caption{The flux and entropy of different interaction sessions
       divided into beginning, middle, and end.}
