--- a/flux-entropy-paper/flux-entropy-paper.tex
+++ b/flux-entropy-paper/flux-entropy-paper.tex
@@ -163,8 +163,8 @@ featured a variety of sound palettes, different kinds of visual
 feedback, and different kinds of networked interactions (between the
 iPads in an ensemble and with a central server).
 
-In all of our 95 interaction sessions, every touch interaction---
-touches begin, touches move, touches end ---was time-stamped and
+In all of our 95 interaction sessions, every touch interaction 
+(touches begin, touches move, touches end) was time-stamped and
 logged to disk for later analysis. These sessions included {\em rehearsals} without an
 audience, as well as {\em concerts}, in front of a live audience, where 
 performative goals were paramount. They also included a number of {\em
