now fits on 4 pages phew!

--- a/flux-entropy-paper/flux-entropy-paper.tex
+++ b/flux-entropy-paper/flux-entropy-paper.tex
@@ -287,7 +287,7 @@ performers and the whole ensemble in each session.
 \label{sec:underst-impr-group}
 
 While the interaction sessions recorded in our corpus were performed
-by many different participants with varying experience levels, in
+by many different participants in
 different contexts and on different instrumental setups, the common
 interface and method of recording the data allows all the sessions to
 be transformed into gesture sequences, and transition matrices. While
@@ -338,18 +338,8 @@ insight into the internal structure of performances?
     \label{fig:count-data}}
 \end{figure}
 
-
 \subsection{Differentiating interaction sessions}
 \label{differentiating-interaction-sessions}
-
-\begin{figure} \centering
-  \includegraphics[width=\linewidth]{figures/context-flux-entropy-boxplot}
-  \caption{Distributions of flux and entropy values by performance
-context. Recording and rehearsal sessions had the highest flux for
-improvisations. Compositions had lower
-flux in rehearsals than concerts.
-\label{fig:flux-entropy-boxplot}}
-\end{figure}
 
 The distribution of flux and entropy with respect to session {\em contexts} (concert,
 rehearsal, recording),
@@ -419,6 +409,16 @@ matrices.
 % performance_context:performance_type:instruments  0.8396
 % Residuals                                               
 % R> 
+
+\begin{figure} \centering
+  \includegraphics[width=\linewidth]{figures/context-flux-entropy-boxplot}
+  \caption{Distributions of flux and entropy values by performance
+context. Recording and rehearsal sessions had the highest flux for
+improvisations. Compositions had lower
+flux in rehearsals than concerts.
+\label{fig:flux-entropy-boxplot}}
+\end{figure}
+
 
 \begin{figure*}[t!]
     \centering
@@ -547,7 +547,7 @@ art~\cite{Manovich:2002ly} from these data corpuses.
 %interactions outside the lab.
 
 
-%\pagebreak
+\pagebreak
 \bibliographystyle{SIGCHI-Reference-Format}
 \bibliography{references}
 
