--- a/flux-entropy-paper/references.bib
+++ b/flux-entropy-paper/references.bib
@@ -1,12 +1,18 @@
 @article{Breiman:2001kx,
-	Author = {Breiman, Leo},
-	Journal = {Machine Learning},
-	Number = {1},
-	Pages = {5-32},
-	Title = {Random Forests},
-	Volume = {45},
-	Year = {2001}}
-
+year=2001,
+issn={0885-6125},
+journal={Machine Learning},
+volume=45,
+number=1,
+doi={10.1023/A:1010933404324},
+title={Random Forests},
+url={http://dx.doi.org/10.1023/A%3A1010933404324},
+publisher={Kluwer Academic Publishers},
+keywords={classification; regression; ensemble},
+author={Breiman, Leo},
+pages={5-32},
+language={English}
+}
 
 @misc{Dobrushin:fk,
 	Author = {R.L. Dobrushin and V.V. Prelov},
@@ -165,41 +171,46 @@ In this article a much more explicit cognitive formulation is presented, the fir
 } 
 
 @article{Thimbleby:2001kq,
-	Acmid = 376941,
-	Address = {New York, NY, USA},
-	Author = {Thimbleby, Harold and Cairns, Paul and Jones, Matt},
-	Issn = {1073-0516},
-	Issue_Date = {June 2001},
-	Journal = {ACM Trans. Comput.-Hum. Interact.},
-	Keywords = {Markov models, usability analysis},
-	Month = jun,
-	Number = 2,
-	Numpages = 34,
-	Pages = {99--132},
-	Publisher = {ACM},
-	Title = {Usability Analysis with Markov Models},
-	Volume = 8,
-	Year = 2001
-  } 
+ author = {Thimbleby, Harold and Cairns, Paul and Jones, Matt},
+ title = {Usability Analysis with Markov Models},
+ journal = {ACM Trans. Comput.-Hum. Interact.},
+ issue_date = {June 2001},
+ volume = {8},
+ number = {2},
+ month = jun,
+ year = {2001},
+ issn = {1073-0516},
+ pages = {99--132},
+ numpages = {34},
+ url = {http://doi.acm.org/10.1145/376929.376941},
+ doi = {10.1145/376929.376941},
+ acmid = {376941},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Markov models, usability analysis},
+} 
 
 
 @article{Thimbleby:2004fj,
-	Acmid = 1005364,
-	Address = {New York, NY, USA},
-	Author = {Thimbleby, Harold},
-	Issn = {1073-0516},
-	Issue_Date = {June 2004},
-	Journal = {ACM Trans. Comput.-Hum. Interact.},
-	Keywords = {Matrix algebra, feature interaction, usability analysis, user interface design},
-	Month = jun,
-	Number = 2,
-	Numpages = 56,
-	Pages = {181--236},
-	Publisher = {ACM},
-	Title = {User Interface Design with Matrix Algebra},
-	Volume = 11,
-	Year = 2004
- }
+ author = {Thimbleby, Harold},
+ title = {User Interface Design with Matrix Algebra},
+ journal = {ACM Trans. Comput.-Hum. Interact.},
+ issue_date = {June 2004},
+ volume = {11},
+ number = {2},
+ month = jun,
+ year = {2004},
+ issn = {1073-0516},
+ pages = {181--236},
+ numpages = {56},
+ url = {http://doi.acm.org/10.1145/1005361.1005364},
+ doi = {10.1145/1005361.1005364},
+ acmid = {1005364},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Matrix algebra, feature interaction, usability analysis, user interface design},
+} 
+
 
 @book{Venables:2002qv,
 	Author = {Venables, William N. and Ripley, Brian D.},
@@ -228,13 +239,20 @@ In this article a much more explicit cognitive formulation is presented, the fir
 }
 
 @article{scikit-learn,
-	Author = {Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V. and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P. and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
-	Journal = {Journal of Machine Learning Research},
-	Pages = {2825--2830},
-	Title = {Scikit-learn: Machine Learning in {P}ython},
-	Volume = {12},
-	Year = {2011}}
-
+ author = {Pedregosa, Fabian and Varoquaux, Ga\"{e}l and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and Vanderplas, Jake and Passos, Alexandre and Cournapeau, David and Brucher, Matthieu and Perrot, Matthieu and Duchesnay, \'{E}douard},
+ title = {Scikit-learn: Machine Learning in {P}ython},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {2/1/2011},
+ volume = {12},
+ month = nov,
+ year = {2011},
+ issn = {1532-4435},
+ pages = {2825--2830},
+ numpages = {6},
+ url = {http://dl.acm.org/citation.cfm?id=1953048.2078195},
+ acmid = {2078195},
+ publisher = {JMLR.org},
+} 
 
 @book{Aristotle:350rt,
 	Author = {Aristotle},
@@ -260,8 +278,14 @@ In this article a much more explicit cognitive formulation is presented, the fir
 
 
 @inproceedings{Martin:2015jk,
+	Abstract = {We present and evaluate a novel interface for tracking ensemble performances on touch-screens. The system uses a Random Forest classifier to extract touch-screen gestures and transition matrix statistics. It analyses the resulting gesture-state sequences across an ensemble of performers. A series of specially designed iPad apps respond to this real-time analysis of free-form gestural performances with calculated modifications to their musical interfaces. We describe our system and evaluate it through cross-validation and profiling as well as concert experience.},
+	Address = {Baton Rouge, Louisiana, USA},
 	Author = {Charles Martin and Henry Gardner and Ben Swift},
-	Booktitle = {Proc. NIME '15},
+	Booktitle = {Proceedings of the International Conference on New Interfaces for Musical Expression},
+	Editor = {Edgar Berdahl and Jesse Allison},
+	Month = {May 31 -- June 3},
+	Pages = {359--364},
+	Publisher = {Louisiana State University},
 	Title = {Tracking Ensemble Performance on Touch-Screens with Gesture Classification and Transition Matrices},
-	Year = {2015}
- }
+	Url = {http://www.nime.org/proceedings/2015/nime2015_242.pdf},
+	Year = 2015}
