final updates! uploading now.

--- a/flux-entropy-paper/flux-entropy-paper.tex
+++ b/flux-entropy-paper/flux-entropy-paper.tex
@@ -177,7 +177,7 @@ percussion instruments. Although the majority of the sessions were
 free-form improvisations, a number of rehearsals and performances
 involved composed pieces where the musicians read and performed
 percussion notation using the apps.
-Some of these session contexts are are shown
+Some of these session contexts are are shown in 
 Figure~\ref{fig:three-performance-contexts} and other descriptive
 statistics about the corpus are shown in Table \ref{corpus-table}.
 In our corpus, the median length of sessions is 7m26s and the median
@@ -235,7 +235,7 @@ established that musical performances on touch-screens define
 vocabularies of continuous macro gestures that unfold over
 several seconds of touch interaction~\cite{Martin:2014cr}, and that
 gestural performances can be divided into sequences of such states~\cite{Pressing:1988uo}, these logs
- can be used identify a sequence of such states for each performer.
+ can be used to identify a sequence of such states for each performer.
 If a performers' touch interactions can be classified as belonging
 to one of $m$ distinct states, then, over the course of a session, each
 participant $X$ generates a length $N$ sequence of these interaction
@@ -516,7 +516,7 @@ research~\cite{Wilson:2011ve}. The macro-gestures that these
 processes reveal could be used as the basis for ``transcoding'' new works of new media
 art~\cite{Manovich:2002ly} from these data corpuses.
 
-\pagebreak
+\break
 \bibliographystyle{SIGCHI-Reference-Format}
 \bibliography{references}
 
