working sound object playback tests

--- a/sound-object-playback.ipynb
+++ b/sound-object-playback.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -34,7 +34,9 @@
     "from mpl_toolkits.mplot3d import Axes3D \n",
     "import seaborn as sns\n",
     "import random\n",
+    "from touch_performance_player import TouchPerformancePlayer\n",
     "import OSC\n",
+    "\n",
     "\n",
     "def clean_sound_object(frame):\n",
     "    \"\"\"Cleans up sound object frames by removing unneeded \n",
@@ -46,7 +48,17 @@
     "    # output.time = output.time.diff() # adding \n",
     "    output.time = output.time.fillna(0)\n",
     "    output = output.rename(columns={'x_pos': 'x', 'y_pos': 'y', 'velocity': 'velocity', 'time': 'time'})\n",
-    "    return output"
+    "    return output\n",
+    "\n",
+    "def five_second_frame(row, frame):\n",
+    "    \"\"\"\n",
+    "    Returns a dataframe of five seconds length before \"time\".\n",
+    "    \"\"\"\n",
+    "    end_time = row.name\n",
+    "    frame = frame.between_time((end_time + timedelta(seconds=-5)).time(), end_time.time())\n",
+    "    if frame.empty:\n",
+    "        return np.nan\n",
+    "    return frame"
    ]
   },
   {
@@ -106,9 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -131,10 +143,6 @@
     "\t\t\"\"\"Adds a performer's address and port to the list\"\"\"\n",
     "\t\tself.performers[name] = (address, port)\n",
     "\n",
-    "\tdef setSynth(self, instrument = \"strings\"):\n",
-    "\t    \"\"\"Sends an OSC message to set the synth instrument.\"\"\"\n",
-    "\t    self.client.sendto(OSC.OSCMessage(\"/inst\", [instrument]),address)\n",
-    "\n",
     "\tdef sendTouch(self, performer, x, y, velocity):\n",
     "\t    \"\"\"Sends an OSC message to trigger a touch sound.\"\"\"\n",
     "\t    address = self.performers[performer]\n",
@@ -148,26 +156,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['24C41EC3-7ECC-40DA-B942-7ABE23017E74'\n",
+      " '9A5116EA-2793-4C75-AC93-524C9EF550FD'\n",
+      " 'BD49B35A-8999-4987-9759-8D3F28D1292B'\n",
+      " '1A56F5DD-C5B6-4E56-8690-E5A12BAA7E78']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/site-packages/ipykernel/__main__.py:9: FutureWarning: how in .resample() is deprecated\n",
+      "the new syntax is .resample(...).count()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                       device_id  x_pos  \\\n",
+      "time                                                                      \n",
+      "2015-04-29 18:11:57.393429  9A5116EA-2793-4C75-AC93-524C9EF550FD  518.5   \n",
+      "2015-04-29 18:11:57.943861  9A5116EA-2793-4C75-AC93-524C9EF550FD  606.0   \n",
+      "2015-04-29 18:11:58.645162  9A5116EA-2793-4C75-AC93-524C9EF550FD  716.5   \n",
+      "2015-04-29 18:11:59.285835  9A5116EA-2793-4C75-AC93-524C9EF550FD  796.5   \n",
+      "2015-04-29 18:11:59.310809  9A5116EA-2793-4C75-AC93-524C9EF550FD  793.5   \n",
+      "2015-04-29 18:11:59.311591  9A5116EA-2793-4C75-AC93-524C9EF550FD  792.5   \n",
+      "2015-04-29 18:11:59.346351  9A5116EA-2793-4C75-AC93-524C9EF550FD  885.0   \n",
+      "2015-04-29 18:11:59.663818  9A5116EA-2793-4C75-AC93-524C9EF550FD  945.0   \n",
+      "2015-04-29 18:12:00.209270  9A5116EA-2793-4C75-AC93-524C9EF550FD  964.5   \n",
+      "2015-04-29 18:12:00.274555  9A5116EA-2793-4C75-AC93-524C9EF550FD  991.5   \n",
+      "\n",
+      "                            y_pos  velocity  \n",
+      "time                                         \n",
+      "2015-04-29 18:11:57.393429  396.0   0.00000  \n",
+      "2015-04-29 18:11:57.943861  421.5   0.00000  \n",
+      "2015-04-29 18:11:58.645162  408.0   0.00000  \n",
+      "2015-04-29 18:11:59.285835  420.0   0.00000  \n",
+      "2015-04-29 18:11:59.310809  417.0   4.24264  \n",
+      "2015-04-29 18:11:59.311591  417.0   1.00000  \n",
+      "2015-04-29 18:11:59.346351  508.5   0.00000  \n",
+      "2015-04-29 18:11:59.663818  570.5   0.00000  \n",
+      "2015-04-29 18:12:00.209270  638.5   0.00000  \n",
+      "2015-04-29 18:12:00.274555  719.5   0.00000  \n",
+      "2015-04-29 18:11:57.393429\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-9118:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/threading.py\", line 801, in __bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/threading.py\", line 1073, in run\n",
+      "    self.function(*self.args, **self.kwargs)\n",
+      "  File \"<ipython-input-48-5fc1283843cb>\", line 22, in sendTouch\n",
+      "    address = self.performers[performer]\n",
+      "KeyError: 'charles'\n",
+      "\n",
+      "Exception in thread Thread-9119:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/threading.py\", line 801, in __bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/threading.py\", line 1073, in run\n",
+      "    self.function(*self.args, **self.kwargs)\n",
+      "  File \"<ipython-input-48-5fc1283843cb>\", line 22, in sendTouch\n",
+      "    address = self.performers[performer]\n",
+      "KeyError: 'charles'\n",
+      "\n",
+      "Exception in thread Thread-9120:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/threading.py\", line 801, in __bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/threading.py\", line 1073, in run\n",
+      "    self.function(*self.args, **self.kwargs)\n",
+      "  File \"<ipython-input-48-5fc1283843cb>\", line 22, in sendTouch\n",
+      "    address = self.performers[performer]\n",
+      "KeyError: 'charles'\n",
+      "\n",
+      "Exception in thread Thread-9121:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/threading.py\", line 801, in __bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/threading.py\", line 1073, in run\n",
+      "    self.function(*self.args, **self.kwargs)\n",
+      "  File \"<ipython-input-48-5fc1283843cb>\", line 22, in sendTouch\n",
+      "    address = self.performers[performer]\n",
+      "KeyError: 'charles'\n",
+      "\n",
+      "Exception in thread Thread-9122:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/threading.py\", line 801, in __bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/threading.py\", line 1073, in run\n",
+      "    self.function(*self.args, **self.kwargs)\n",
+      "  File \"<ipython-input-48-5fc1283843cb>\", line 22, in sendTouch\n",
+      "    address = self.performers[performer]\n",
+      "KeyError: 'charles'\n",
+      "\n",
+      "Exception in thread Thread-9123:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/threading.py\", line 801, in __bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/threading.py\", line 1073, in run\n",
+      "    self.function(*self.args, **self.kwargs)\n",
+      "  File \"<ipython-input-48-5fc1283843cb>\", line 22, in sendTouch\n",
+      "    address = self.performers[performer]\n",
+      "KeyError: 'charles'\n",
+      "\n",
+      "Exception in thread Thread-9124:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/threading.py\", line 801, in __bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/threading.py\", line 1073, in run\n",
+      "    self.function(*self.args, **self.kwargs)\n",
+      "  File \"<ipython-input-48-5fc1283843cb>\", line 22, in sendTouch\n",
+      "    address = self.performers[performer]\n",
+      "KeyError: 'charles'\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "#from touch_performance_player import TouchPerformancePlayer\n",
-    "\n",
     "player = TouchPerformancePlayer()\n",
-    "\n",
-    "log = log_frames[12]\n",
-    "log = log[log.device_id == 'charles']\n",
-    "perf = clean_sound_object(log)[:1000]\n",
-    "\n",
     "player.addPerformer('charles','192.168.0.36',51200)\n",
     "\n",
-    "#player.sendTouch('charles',283.5,497.5,0)\n",
+    "log = log_frames[120]\n",
+    "print(log.device_id.unique())\n",
+    "log_frame = log[log.device_id == '9A5116EA-2793-4C75-AC93-524C9EF550FD']\n",
+    "perf = clean_sound_object(log_frame)[:1000]\n",
+    "#print(log)\n",
     "\n",
-    "#perf\n",
-    "player.playPerformance(perf,'charles')\n"
+    "## Sound object processing routine.\n",
+    "# log_frame has to be a one-performer frame.\n",
+    "times = pd.DataFrame(log_frame.index,index=log_frame.index).resample('1s',how='count')\n",
+    "sound_objects = times.apply(five_second_frame, axis=1, frame=log_frame).dropna()\n",
+    "\n",
+    "## Try one out:\n",
+    "player.playPerformance(clean_sound_object(sound_objects.ix[153]),'charles')\n",
+    "\n",
+    "#player.playPerformance(perf,'charles')\n",
+    "\n",
+    "\n",
+    "#player.sendTouch('charles',283.5,497.5,5.0)\n",
+    "\n"
    ]
   },
   {
@@ -178,19 +321,7 @@
    },
    "source": [
     "# Process touch logs\n",
-    "\n",
-    "- Divide each touch log by performer\n",
-    "- Convert each log to tiny performance format (time as float, x, y, moving)\n",
-    "- Save each log individually (currently commented)\n",
-    "- Concatenate all logs into one\n",
-    "- Save as a big log file (177MB - 4.3M touches)\n",
-    "\n",
-    "### Problems\n",
-    "\n",
-    "- A small number of logs are in y,x format (rotated), so some x,y values end up less than 0 or more than 1.\n",
-    "- Velocity is dropped in the interest of simplicity.\n",
-    "- Some pauses are greater than 5 seconds and should really start again as zero.\n",
-    "- The last two problems are kicked down the road to the next processing script.\n"
+    "\n"
    ]
   },
   {
@@ -218,14 +349,12 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "total_touches = 0\n",
     "total_performances = 0\n",
     "total_performers = 0\n",
-    "all_individual_tiny_perfs = []\n",
+    "all_perfs_objects = []\n",
     "\n",
-    "print(\"Dividing all performances by player and converting to tiny performance format.\")\n",
+    "print(\"Dividing all performances by player and converting to perf object format\")\n",
     "\n",
     "for log in log_frames:\n",
     "    total_performances += 1\n",
@@ -273,25 +402,11 @@
    },
    "outputs": [],
    "source": [
-    "def five_second_frame(row, frame):\n",
-    "    \"\"\"\n",
-    "    Returns a dataframe of five seconds length before \"time\".\n",
-    "    \"\"\"\n",
-    "    end_time = row.name\n",
-    "    frame = frame.between_time((end_time + timedelta(seconds=-5)).time(), end_time.time())\n",
-    "    if frame.empty:\n",
-    "        return np.nan\n",
-    "    return frame\n",
+    "\n",
     "\n",
     "def split_and_classify_metatone_log(log_frame):\n",
     "    return [],[]\n",
     "\n",
-    "#log_frame = pd.DataFrame.from_csv(a,parse_dates=True,header=0)\n",
-    "#log_frame[\"moving\"] = log_frame.velocity/log_frame.velocity\n",
-    "#log_frame.moving = log_frame.moving.fillna(0)\n",
-    "#times = pd.DataFrame(log_frame.index,index=log_frame.index).resample('1s', how='count')\n",
-    "#sound_object_frames = pd.DataFrame(log_frame.index,index=log_frame.index)\n",
-    "#times[\"sound_object_frames\"] = times.apply(five_second_frame, axis=1, frame=log_frame)\n",
     "\n",
     "#for performer in log_frame.device_id.unique():\n",
     "#    sound_object_frames[performer] = times.apply(five_second_frame, axis=1, frame=log_frame, name=performer)\n",
